add api endpoint

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,8 @@
 {% load static %}
-<html>
+<!doctype html>
+<html lang="ru">
   <head>
+    <meta charset="utf-8">
     <title>{% block title %}{% endblock %}</title>
     <link href="{% static 'css/checkout.css' %}" rel="stylesheet">
   </head>
